// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background-color: black;
}

<div
  className="c0"
/>
`;

exports[`Home.styles ContainerImagem DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 90vw;
  height: auto;
  padding: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Home.styles Imagem DEVE ser igual ao snapshot 1`] = `
.c0 {
  width: 85%;
  height: auto;
  src: photo.jpg;
}

<img
  alt="Imagem de site em manutenção"
  className="c0"
  src="photo.jpg"
/>
`;
